<resources>
    <string name="app_name">Healthy Pets</string>
    <string name="auth_help_come_up_code">Придумайте код\nдля входа вприложение</string>
    <string name="auth_help_repeat_code">Повторите код</string>
    <string name="auth_help_enter_сode">Введите код\nдля входа в приложение</string>
    <string name="not_install_code">Не устанавливать код</string>
    <string name="can_not_enter">Не могу войти</string>
    <string name="not_match_pin_code">Коды не совпадают</string>
    <string name="wrong_pin_code">Неправильный код</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="choose_food_for_your_pet">Подберите корм\nдля своего питомца</string>
    <string name="pickupfood_description">Алгоритм подберет подходящие\nкорма с учетом всех\nособенностей питомца</string>
    <string name="pickupfood_button">Подобрать</string>
    <string name="consultation_name">Консультация специалиста</string>
    <string name="consultation_description">Задайте дежурному ветеринару срочные вопросы\nили запишитесь на консультацию к диетологу</string>
    <string name="consultation_status_online">Сейчас диетолог онлайн</string>
    <string name="consultation_button">Пройти консультацию</string>
    <string name="fillpetprofile_name">Заполните подробно профиль\nпитомца</string>
    <string name="fillpetprofile_info_button">Зачем это нужно?</string>
    <string name="veterianariansmap_name">Ветеринары рядом</string>
    <string name="veterianariansmap_description">Выбрать специалиста\nили клинику рядом</string>
    <string name="telegramchat_name">Чат бот в telegram</string>
    <string name="telegramchat_description">Подбрать специалиста\nи записаться на прием</string>
    <string name="urgenthelp_name">Тревожный симптом</string>
    <string name="urgenthelp_description">Когда необходимо срочно\nобратиться за помощью?</string>
    <string name="urgenthelp_button">Узнать</string>
    <string name="buy">Купить</string>
    <string name="feed_name">Корма</string>
    <string name="feed_get_all">Посмотреть все</string>
    <string name="main">Главная</string>
    <string name="health">Здоровье</string>
    <string name="pets">Питомцы</string>
    <string name="profile">Профиль</string>
    <string name="reset_help">Мы отправили письмо с ссылкой\nдля сброса кода на ваш e-mail </string>
    <string name="test_emile">example@mail.ru</string>
    <string name="CUB">Молодой</string>
    <string name="CUB_1">Молодой 1</string>
    <string name="CUB_2">Молодой 2</string>
    <string name="ADULT">Взрослый</string>
    <string name="SENIOR">Пожилой</string>
    <string name="SENIOR_1">Пожилой 1</string>
    <string name="SENIOR_2">Пожилой 2</string>
    <string name="empty_value">-</string>
    <string name="SMALL_X">Мелкие породы</string>
    <string name="SMALL">Маленькие породы</string>
    <string name="MEDIUM">Средние породы</string>
    <string name="MAXI">Макси породы</string>
    <string name="GIANT">Гигантские породы</string>
    <string name="ANY">Любые</string>
    <string name="dry">Сухой</string>
    <string name="proteins">Белки</string>
    <string name="fats">Жиры</string>
    <string name="minerals">Минеральные вещества</string>
    <string name="dietaryFiber">Клетчатка пищевая</string>
    <string name="type">Тип</string>
    <string name="compound">Состав</string>
    <string name="age_range">Возрастной диапазон</string>
    <string name="weight_range">Весовой диапазон</string>
    <string name="type_protein">Вид протеина</string>
    <string name="special_needs">Особые потребности</string>
    <string name="nutrients">Питательные вещества</string>
    <string name="manufacturer_country">Страна производитель</string>
    <string name="exit">Выход</string>
    <string name="personal_info">Личная информация</string>
    <string name="my_pets">Мои питомцы</string>
    <string name="payment_method">Способы оплаты</string>
    <string name="settings">Настройки</string>
    <string name="support">Поддержка</string>
    <string name="about_app">О приложении</string>
    <string name="save">Сохранить</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>
</resources>
