<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/select_main"
        android:title="@string/main"
        android:icon="@drawable/main_menu_picture"
        android:orderInCategory="1"/>

    <item android:id="@+id/select_health"
        android:title="@string/health"
        android:icon="@drawable/health_menu_picture"
        android:orderInCategory="2"/>

    <item android:id="@+id/select_pets"
        android:title="@string/pets"
        android:icon="@drawable/pets_menu_picture"
        android:orderInCategory="3"/>

    <item android:id="@+id/select_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_menu_picture"
        android:orderInCategory="4"/>

</menu>
