<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/solitude"
    tools:context=".presenter.auth.AuthFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/button_back_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/back_picture"
        app:layout_constraintBottom_toTopOf="@+id/pincode_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pincode_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/auth_picture"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/help_textView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/help_textView"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:breakStrategy="simple"
        android:gravity="center_horizontal|top"
        android:text="@string/auth_help_come_up_code"
        android:textAppearance="@style/AuthTextHint"
        android:layout_margin="18dp"
        app:layout_constraintTop_toBottomOf="@+id/pincode_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/wrong_textView"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wrong_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wrong_pin_code"
        android:textAppearance="@style/AuthWrongText"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/help_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/pincode_points_holder_gridLayout"/>

    <GridLayout
        android:id="@+id/pincode_points_holder_gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@+id/wrong_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttons_holder_gridLayout">

        <View
            android:id="@+id/pincode_point_1"
            style="@style/PinCodePointStyle"
            android:background="@drawable/pincode_point_empty" />

        <View
            android:id="@+id/pincode_point_2"
            style="@style/PinCodePointStyle"
            android:background="@drawable/pincode_point_empty" />

        <View
            android:id="@+id/pincode_point_3"
            style="@style/PinCodePointStyle"
            android:background="@drawable/pincode_point_empty" />

        <View
            android:id="@+id/pincode_point_4"
            style="@style/PinCodePointStyle"
            android:background="@drawable/pincode_point_empty" />

    </GridLayout>

    <GridLayout
        android:id="@+id/buttons_holder_gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/pincode_points_holder_gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_textView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_1"
            style="@style/KeyboardButtonStyle"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/button_state"
            android:text="@string/_1" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_2"
            style="@style/KeyboardButtonStyle"
            android:layout_row="1"
            android:layout_column="1"
            android:background="@drawable/button_state"
            android:text="@string/_2" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_3"
            style="@style/KeyboardButtonStyle"
            android:layout_row="1"
            android:layout_column="2"
            android:background="@drawable/button_state"
            android:text="@string/_3" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_4"
            style="@style/KeyboardButtonStyle"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/button_state"
            android:text="@string/_4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_5"
            style="@style/KeyboardButtonStyle"
            android:layout_row="2"
            android:layout_column="1"
            android:background="@drawable/button_state"
            android:text="@string/_5" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_6"
            style="@style/KeyboardButtonStyle"
            android:layout_row="2"
            android:layout_column="2"
            android:background="@drawable/button_state"
            android:text="@string/_6" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_7"
            style="@style/KeyboardButtonStyle"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/button_state"
            android:text="@string/_7" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_8"
            style="@style/KeyboardButtonStyle"
            android:layout_row="3"
            android:layout_column="1"
            android:background="@drawable/button_state"
            android:text="@string/_8" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_9"
            style="@style/KeyboardButtonStyle"
            android:layout_row="3"
            android:layout_column="2"
            android:background="@drawable/button_state"
            android:text="@string/_9" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_0"
            style="@style/KeyboardButtonStyle"
            android:layout_row="4"
            android:layout_column="1"
            android:background="@drawable/button_state"
            android:text="@string/_0" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_backspace"
            style="@style/KeyboardButtonStyle"
            android:layout_row="4"
            android:layout_column="2"
            android:background="@drawable/button_state"
            android:src="@drawable/backspace" />
    </GridLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/button_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_install_code"
        android:textAppearance="@style/AuthButtonText"
        android:clickable="true"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@+id/buttons_holder_gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
