<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/casablanca_card_background">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pickupfood_name_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/choose_food_for_your_pet"
        android:textAppearance="@style/MainScreenMainText"
        app:layout_constraintEnd_toStartOf="@+id/pickupfood_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/pickupfood_description_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/pickupfood_description"
        android:textAppearance="@style/MainScreenDescriptionText"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/pickupfood_button"
        app:layout_constraintEnd_toStartOf="@+id/pickupfood_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pickupfood_name_textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/pickupfood_button"
        android:layout_width="101dp"
        android:layout_height="32dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/pickupfood_button"
        android:textSize="13sp"
        android:textAppearance="@style/MainScreenMainTextButton"
        style="@style/MainScreenButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/pickupfood_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/girl_with_dog_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
